# hermes-rs

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.12factor  README.12factor.md  config.yml  docker-compose.12factor.yml  prometheus.yml
.github/workflows/: docker-image.yml
config/: config.yml
src/: admin.rs  config.rs  health.rs  lib.rs  main.rs
